--- a/src/pages/CarDetails/components/SportsCar.css
+++ b/src/pages/CarDetails/components/SportsCar.css
@@ -7,24 +7,20 @@
 
 .Car_heading {
   font-size: 60px;
-  font-weight:600;
-  color: #294872; 
+  font-weight: 600;
+  color: #294872;
   margin-bottom: 5px;
-font-family: 'Abhaya Libre', serif;
-
- 
 }
 
-.sportscar_img{
-    padding: 0px;
+.sportscar_img {
+  padding: 0px;
 }
- img {
+img {
   width: 100vw;
   max-width: 1300px; /* keeps it responsive */
   height: auto;
   border-radius: 8px;
   object-fit: cover;
-
 }
 
 .Book_test {
@@ -32,7 +28,7 @@ font-family: 'Abhaya Libre', serif;
 }
 
 .drive_button {
-  background-color: #377CDB; 
+  background-color: #377cdb;
   color: white;
   font-size: 30px;
   font-weight: 600;
@@ -47,4 +43,15 @@ font-family: 'Abhaya Libre', serif;
 .drive_button:hover {
   background-color: #155bb5;
   transform: scale(1.05);
+}
+
+@media (max-width: 600px) {
+  .Car_heading {
+    font-size: 25px;
+  }
+  .drive_button {
+    font-size: 18px;
+    font-weight: 600;
+    padding: 10px 28px;
+  }
 }
