--- a/src/components/ContactPage.css
+++ b/src/components/ContactPage.css
@@ -11,6 +11,7 @@
   justify-content: center;
   z-index: 9999;
   font-family: sans-serif;
+
 }
 
 /* Modal Box */
@@ -110,4 +111,24 @@
 
 .first-name , .last-name{
     width: 50%;
+}
+
+
+@media (max-width:600px) {
+ /* Modal Box */
+.contact-modal {
+  /* padding: 2rem; */
+  width: 100%;
+} 
+.form-row {
+  width: 100%;
+}
+
+.form-row .first-name .last-name {
+  flex: 100%;
+ 
+}
+.first-name , .last-name{
+    width: 100%;
+}
 }
