--- a/src/pages/CarAccessories/components/EjarAccessories.css
+++ b/src/pages/CarAccessories/components/EjarAccessories.css
@@ -4,7 +4,8 @@
 }
 
 /* Wrapper */
-.parent_acc_container{
+.parent_acc_container {
+  width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -20,9 +21,9 @@
 
 /* Heading */
 .acc__heading {
-  font-size: 30px;          /* as requested */
-  font-weight: 600;
-  color: var(--acc-blue);   /* as requested */
+  font-size: 30px; /* as requested */
+  font-weight: 700;
+  color: var(--acc-blue); /* as requested */
   margin-bottom: 40px;
 }
 
@@ -55,7 +56,6 @@
   font-weight: 600;
   color: var(--acc-blue);
   margin: 6px 0px 6px;
-  
 }
 
 /* Description */
@@ -65,7 +65,6 @@
   line-height: 1.4;
   margin: 0px;
   width: 75%;
-
 }
 
 /* Responsive */
@@ -79,5 +78,12 @@
 @media (max-width: 500px) {
   .acc__grid {
     grid-template-columns: 1fr;
+  }
+  .acc__container {
+    width: 100%;
+    padding: 10px;
+  }
+  .acc__heading {
+    font-size: 25px; /* as requested */
   }
 }
