--- a/src/pages/CarAccessories/components/Unique_car.css
+++ b/src/pages/CarAccessories/components/Unique_car.css
@@ -5,34 +5,30 @@
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
-.unique_heading{
+.unique_heading {
   font-size: 60px;
-  font-weight:600;
-  color: #294872; 
+  font-weight: 600;
+  color: #294872;
   margin-bottom: 5px;
- font-family: 'Abhaya Libre', serif;
-
- 
 }
 
-.sportscar_img{
-    padding: 0px;
+.sportscar_img {
+  padding: 0px;
 }
- img {
+img {
   width: 100vw;
   max-width: 1300px; /* keeps it responsive */
   height: auto;
   border-radius: 8px;
   object-fit: cover;
-
 }
 
 .Book_test {
   margin-top: 10px;
 }
 
-.uniqueUpgrade{
-  background-color: #377CDB; 
+.uniqueUpgrade {
+  background-color: #377cdb;
   color: white;
   font-size: 30px;
   font-weight: 600;
@@ -45,6 +41,23 @@
 }
 
 .uniqueUpgrade:hover {
-  background-color: #377CDB;
+  background-color: #377cdb;
   transform: scale(1.05);
+}
+@media (max-width: 600px) {
+  .unique_heading {
+    font-size: 25px;
+  }
+  .uniqueUpgrade {
+    font-size: 18px;
+    font-weight: 600;
+    padding: 10px 28px;
+  }
+  .unique_continer {
+    padding: 10px;
+  }
+  img {
+   width: 100%;
+  
+  }
 }
