--- a/src/pages/HomePage/components/BrandLogo/PopularBrands.css
+++ b/src/pages/HomePage/components/BrandLogo/PopularBrands.css
@@ -1,19 +1,18 @@
-.container{
+
+.container {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  margin-top:50px ;
+  margin-top: 50px;
 }
 
 .brands-container {
   border: 1px solid #294872; 
   border-radius: 6px;
   padding: 25px;
-
   margin-bottom: 3rem;
   width: 1200px;
   background: #fff;
-  
 }
 
 .brands-title {
@@ -28,14 +27,13 @@
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 1rem;
-  margin-bottom: 3rem ;
+  margin-bottom: 3rem;
 }
 
 .brand-card {
   text-align: center;
   border: 1px solid #6B7A90;
   border-radius: 10px;
-
   background: #fafafa;
 }
 
@@ -46,8 +44,8 @@
 
 .brand-card img {
   width: 100%;
-  height: 100% ;
-  background-position: cover;
+  height: 100%;
+  object-fit: cover;
   border-radius: 10px;
 }
 
@@ -60,7 +58,7 @@
 
 .view-all {
   display: inline-block;
-  color: #294872; 
+  color: #294872;
   font-size: 22px;
   text-decoration: none;
   font-weight: 500;
@@ -69,3 +67,40 @@
 .view-all:hover {
   text-decoration: underline;
 }
+
+@media (max-width: 800px) {
+  .container {
+    flex-direction: column;
+    align-items: center; 
+    margin-top: 30px;
+  }
+
+  .brands-container {
+    width: 100%;
+    padding: 15px;
+    box-sizing: border-box;
+  }
+
+  .brands-title {
+    font-size: 25px;
+    text-align: center;
+  }
+
+  .brands-grid {
+    grid-template-columns: repeat(1, 1fr);
+    gap: 3rem;
+  }
+
+  .brand-card p {
+    font-size: 18px;
+    margin-top: 10px;
+  }
+
+  .view-all {
+    font-size: 18px;
+    display: block;
+    text-align: center;
+    margin-top: 1rem;
+  }
+}
+
