--- a/src/pages/SellCars/components/sell_your_car_form.css
+++ b/src/pages/SellCars/components/sell_your_car_form.css
@@ -1,7 +1,8 @@
-:root{
-  --muted: #6B7A90
+:root {
+  --muted: #6b7a90;
 }
 .form-container {
+  border: 1px solid black;
   background: #fff;
   padding: 10px 30px 30px 30px;
   border-radius: 10px;
@@ -13,12 +14,10 @@
 }
 
 .form-container h2 {
-
-  color:#294872;
+  color: #294872;
   font-size: 30px;
-  margin-top: 0px ;
+  margin-top: 0px;
   margin-bottom: 15px;
-
 }
 
 .car-form {
@@ -27,7 +26,7 @@
   gap: 15px;
 }
 
-.sell-form-row {
+.form-row {
   display: flex;
   gap: 20px;
 }
@@ -46,9 +45,8 @@
   appearance: none; /* hide default arrow */
   background: #fff;
   cursor: pointer;
-  
+
   color: var(--muted);
-  
 }
 
 .sellcar_dropdown-icon {
@@ -63,7 +61,7 @@
 }
 
 .submit-btn {
-  background: #377CDB;
+  background: #377cdb;
   color: white;
   border: none;
   padding: 12px;
@@ -79,22 +77,25 @@
   background: #1d5fc9;
 }
 
-
 @media (max-width: 768px) {
-  .sell-form-row {
+  .form-row {
     flex-direction: column;
     gap: 12px;
   }
 
   .form-container {
-    max-width: 90%;
+    max-width: 100%;
     padding: 15px;
+     margin: 0px;
+
   }
 }
 
 @media (max-width: 480px) {
   .form-container {
-    padding: 12px;
+    width: 100%;
+    padding: 10px;
+    margin: 0px;
   }
 
   .custom-select select {
